Interview questions from Bloomberg, moving files